<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_old"
        app:layout_constraintBaseline_toBaselineOf="@+id/etOld"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/btClear"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_cal"
        app:layout_constraintBottom_toTopOf="@+id/btClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etKg"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tvKg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kg2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etKg"
        app:layout_constraintStart_toEndOf="@+id/etKg" />

    <TextView
        android:id="@+id/tvOld2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_old2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etOld"
        app:layout_constraintStart_toEndOf="@+id/etOld" />

    <TextView
        android:id="@+id/tvCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cm"
        app:layout_constraintBaseline_toBaselineOf="@+id/etCm"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tvCm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_cm2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etCm"
        app:layout_constraintStart_toEndOf="@+id/etCm" />

    <TextView
        android:id="@+id/tvOutput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOutput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput1" />

    <TextView
        android:id="@+id/tvOutput3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput2" />

    <TextView
        android:id="@+id/tvOutput4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput3" />

    <EditText
        android:id="@+id/etOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etCm"
        app:layout_constraintStart_toEndOf="@+id/tvOld" />

    <EditText
        android:id="@+id/etCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etKg"
        app:layout_constraintStart_toEndOf="@+id/tvCm" />

    <EditText
        android:id="@+id/etKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btCal"
        app:layout_constraintStart_toEndOf="@+id/tvKg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>